--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
+    "@angular/cli": "~1.7.4",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
@@ -23,6 +25,7 @@
     "@angular/router": "^5.2.0",
     "angular2-flash-messages": "^3.0.1",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
     "ng2-input-autocomplete": "^0.1.0",
     "ng2-simple-autocomplete": "^0.6.1",
     "ng4-geoautocomplete": "^0.1.0",
@@ -36,7 +39,6 @@
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.4",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
