--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "1.0.0-beta.2",
     "@angular/animations": "^5.2.0",
     "@angular/cli": "~1.7.4",
     "@angular/common": "^5.2.0",
@@ -23,6 +24,8 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/stats": "^0.16.30",
+    "angular-maps": "^6.0.1",
     "angular2-flash-messages": "^3.0.1",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
@@ -32,7 +35,7 @@
     "ng4-loading-spinner": "^1.2.3",
     "ngx-google-places-autocomplete": "^2.0.1",
     "ngx-mydatepicker": "^2.4.9",
-    "ngx-pagination": "^3.2.0",
+    "ngx-pagination": "^3.2.1",
     "path": "^0.12.7",
     "rxjs": "^5.5.12",
     "typescript": "~2.5.3",
@@ -41,11 +44,11 @@
   "devDependencies": {
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/jasmine": "^2.8.9",
+    "@types/jasminewd2": "^2.0.5",
+    "@types/node": "^6.0.118",
     "angular-cli-ghpages": "^0.5.3",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
